--- a/phonoteque.html
+++ b/phonoteque.html
@@ -1,137 +1,146 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <link rel="stylesheet" href="phonoteque.css">
-		<meta charset="utf-8"/>
-        <title>phonoteque</title>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
-    </head>
-    <header>
-        <div class="toolbar">
-            <div class="logo">
-                <a href="phonoteque.html">Manoli</a>
-            </div>
-            <div class="liens">
-                <div class="header-salsa">
-                    <a href="style.html">Salsa</a>
-                </div>
-                <div class="header-soul">
-                    <a href="styleX.html">Soul Music</a>
-                </div>
-            </div>
+
+<head>
+    <link rel="stylesheet" href="phonoteque.css">
+    <meta charset="utf-8" />
+    <title>phonoteque</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
+</head>
+<header>
+    <div class="toolbar">
+        <div class="logo">
+            <a href="phonoteque.html">Man<span>Oli</span></a>
         </div>
-        <div class="header-bg">
-            Vivez la musique avec passion
-        </div>
-    </header>
-    <main class="main-acc">
-        <div class="salsa-acc">
-            <h1><a href="style.html">Salsa</a></h1>
-            <div class="artistes-acc">
-                <div class="carte-acc">
-                    <div class="img-acc">
-                        <img src="img/habana.jpg">
-                    </div>
-                    <h2>Havana de Primera</h2>
-                    <figure class="son">Pastilla Menta</figcaption><br>
-                        <audio controls src="son/habanadeprimera.mp3">
-                        </audio>
-                    </figure>      
-                </div>
-                <div class="carte-acc">
-                    <div class="img-acc">
-                        <img src="img/timbalive.jpg">
-                    </div>
-                    <h2>Timbalive</h2>
-                    <figure class="son">Duplicandote La Dos</figcaption><br>
-                        <audio controls src="son/timbalive-ft-roberton-van-van-duplicandote-la-dosis.mp3">
-                        </audio>
-                    </figure>      
-                </div>
-                <div class="carte-acc">
-                    <div class="img-acc">
-                        <img src="img/marcanthony.jpg">
-                    </div>
-                    <h2>Marc Anthony</h2>
-                    <figure class="son">Valio La pena</figcaption><br>
-                        <audio controls src="son/marc-anthony-valio-la-pena-salsa-version.mp3">
-                        </audio>
-                    </figure>      
-                </div>
-                <div class="carte-acc">
-                    <div class="img-acc">
-                        <img src="img/gentedezona.jpg">
-                    </div>
-                    <h2>Gente de Zona</h2>
-                    <figure class="son">La Gozadera</figcaption><br>
-                        <audio controls src="son/Stevie Wonder Superstition.mp3">
-                        </audio>
-                    </figure>      
-                </div>
-            </div>
-        </div>
-        <section class="soul-acc">
-            <h1><a href="styleX.html">Soul Music</a></h1>
-            <div class="artistes-soul-acc">
-                <div class="carte-soul-acc">
-                    <div class="img-soul-acc">
-                        <img src="img/jacket-aretha.jpg">
-                    </div>
-                    <h2>Aretha Franklin</h2>
-                    <figure class="son">I say a little prayer </figcaption><br>
-                        <audio controls src="son/Aretha Franklin - I say a little prayer.mp3">
-                        </audio>
-                    </figure>      
-                </div>
-                <div class="carte-soul-acc">
-                    <div class="img-soul-acc">
-                        <img src="img/otis-redding.jpg">
-                    </div>
-                    <h2>Otis Redding</h2>
-                    <figure class="son">The Dock Of The Bay </figcaption><br>
-                        <audio controls src="son/Otis Redding - (Sittin On) The Dock Of The Bay (Official Music Video) (1).mp3">
-                        </audio>
-                    </figure>      
-                </div>
-                <div class="carte-soul-acc">
-                    <div class="img-soul-acc">
-                        <img src="img/jacket-sam-and-dave.jpg">
-                    </div>
-                    <h2>Sam and Dave</h2>
-                    <figure class="son">Hold on I m coming </figcaption><br>
-                        <audio controls src="son/Sam and Dave - Hold on I m coming.mp3">
-                        </audio>
-                    </figure>      
-                </div>
-                <div class="carte-soul-acc">
-                    <div class="img-soul-acc">
-                        <img src="img/jacket-stevie-wonder.jpg">
-                    </div>
-                    <h2>Stevie Wonder</h2>
-                    <figure class="son">Superstiton </figcaption><br>
-                        <audio controls src="son/Stevie Wonder Superstition.mp3">
-                        </audio>
-                    </figure>      
-                </div>
-            </div>
-        </section>
-    </main>
-    <footer>
-        <div class="footer-logo">
-            <a href="phonoteque.html">Manoli</a>
-            <p>Vivez la musique avec passion</p>
-        </div>
-        <div class="footer-style">
-            <div class="footer-salsa">
+        <div class="liens">
+            <div class="header-salsa">
                 <a href="style.html">Salsa</a>
             </div>
-            <div class="footer-soul">
+            <div class="header-soul">
                 <a href="styleX.html">Soul Music</a>
             </div>
         </div>
-        <div class="footer-social">
-            <a href="facebook.com"><img src="img/logo-facebook.png"></a>
-            <a href="spotify.com"><img src="img/logo-spotify.png"></a>
-            <a href="instagram.com"><img src="img/logo-insta.png"></a>
+    </div>
+    <div class="header-bg">
+        <h3>Vivez la musique avec passion</h3>
+    </div>
+</header>
+<main class="main-acc">
+    <div class="salsa-acc">
+        <h1><a href="style.html">Salsa</a></h1>
+        <div class="artistes-acc">
+            <div class="carte-acc">
+                <div class="img-acc">
+                    <img src="img/habana.jpg" alt="photohabana" />
+                </div>
+                <h2>Havana de Primera</h2>
+                <figure class="son">Pastilla Menta</figcaption>
+                    <br>
+                    <audio controls src="son/habanadeprimera.mp3">
+                    </audio>
+                </figure>
+            </div>
+            <div class="carte-acc">
+                <div class="img-acc">
+                    <img src="img/timbalive.jpg" alt="phototimbalive" />
+                </div>
+                <h2>Timbalive</h2>
+                <figure class="son">Duplicandote La Dos</figcaption>
+                    <br>
+                    <audio controls src="son/timbalive-ft-roberton-van-van-duplicandote-la-dosis.mp3">
+                    </audio>
+                </figure>
+            </div>
+            <div class="carte-acc">
+                <div class="img-acc">
+                    <img src="img/marcanthony.jpg" alt="photomarc" />
+                </div>
+                <h2>Marc Anthony</h2>
+                <figure class="son">Valio La pena </figcaption>
+                    <br>
+                    <audio controls src="son/marc-anthony-valio-la-pena-salsa-version.mp3">
+                    </audio>
+                </figure>
+            </div>
+            <div class="carte-acc">
+                <div class="img-acc">
+                    <img src="img/gentedezona.jpg" alt="photogente" />
+                </div>
+                <h2>Gente de Zona</h2>
+                <figure class="son">La Gozadera</figcaption>
+                    <br>
+                    <audio controls src="son/gente-de-zona-la-gozadera-official-video-ft-marc-anthony.mp3">
+                    </audio>
+                </figure>
+            </div>
         </div>
-    </footer>
+    </div>
+    <section class="soul-acc">
+        <h1><a href="styleX.html">Soul Music</a></h1>
+        <div class="artistes-soul-acc">
+            <div class="carte-soul-acc">
+                <div class="img-soul-acc">
+                    <img src="img/jacket-aretha.jpg" alt="photoaretha" />
+                </div>
+                <h2>Aretha Franklin</h2>
+                <figure class="son">I say a little prayer </figcaption>
+                    <br>
+                    <audio controls src="son/Aretha.mp3">
+                    </audio>
+                </figure>
+            </div>
+            <div class="carte-soul-acc">
+                <div class="img-soul-acc">
+                    <img src="img/otis-redding.jpg" alt="photootis" />
+                </div>
+                <h2>Otis Redding</h2>
+                <figure class="son">The Dock Of The Bay </figcaption>
+                    <br>
+                    <audio controls
+                        src="son/Otis.mp3">
+                    </audio>
+                </figure>
+            </div>
+            <div class="carte-soul-acc">
+                <div class="img-soul-acc">
+                    <img src="img/jacket-sam-and-dave.jpg" alt="photosam" />
+                </div>
+                <h2>Sam and Dave</h2>
+                <figure class="son">Hold on I m coming </figcaption>
+                    <br>
+                    <audio controls src="son/SamandDave.mp3">
+                    </audio>
+                </figure>
+            </div>
+            <div class="carte-soul-acc">
+                <div class="img-soul-acc">
+                    <img src="img/jacket-stevie-wonder.jpg" alt="photostevie" />
+                </div>
+                <h2>Stevie Wonder</h2>
+                <figure class="son">Superstiton</figcaption>
+                    <br>
+                    <audio controls src="son/Stevie.mp3">
+                    </audio>
+                </figure>
+            </div>
+        </div>
+    </section>
+</main>
+<footer>
+    <div class="footer-logo">
+        <a href="phonoteque.html">Man<span>Oli</span></a>
+    </div>
+    <div class="footer-style">
+        <div class="footer-salsa">
+            <a href="style.html">Salsa</a>
+        </div>
+        <div class="footer-soul">
+            <a href="styleX.html">Soul Music</a>
+        </div>
+    </div>
+    <div class="footer-social">
+        <a href="https://fr-fr.facebook.com/"><img src="img/logo-facebook.png" alt="photoface"></a>
+        <a href="https://www.spotify.com/fr/"><img src="img/logo-spotify.png" alt="photospot"></a>
+        <a href="https://www.instagram.com/?hl=fr"><img src="img/logo-insta.png" alt="photoinsta"></a>
+    </div>
+</footer>
