--- a/style.html
+++ b/style.html
@@ -11,7 +11,7 @@
     <header>
         <div class="toolbar">
             <div class="logo">
-                <a href="phonoteque.html">Manoli</a>
+                <a href="phonoteque.html">Man<span>Oli</span></a>
             </div>
             <div class="liens">
                 <div class="header-salsa">
@@ -29,7 +29,8 @@
 
     <main id="salsa">
         <article id="salsapresentation">
-            <br> <p>La salsa (mot espagnol qui signifie « sauce » et, au sens figuré : charme, piquant) désigne à
+            <br>
+            <p>La salsa (mot espagnol qui signifie « sauce » et, au sens figuré : charme, piquant) désigne à
                 la fois un genre musical et une danse ayant des racines cubaines. Cette musique de danse au tempo vif
                 est
                 popularisée dans le monde entier.
@@ -72,7 +73,8 @@
                         carrière de fusion de rythmes à travers la salsa, le jazz, le funk et l'afro-cubain».[4]
 
                         Depuis leur création, le groupe a sorti quatre albums studio et un album live.</p>
-                    <figure class="son">Pastilla Menta</figcaption><br>
+                    <figure class="son">Pastilla Menta</figcaption>
+                        <br>
                         <audio controls src="son/habanadeprimera.mp3">
                         </audio>
                     </figure>
@@ -102,14 +104,14 @@
 
                         Le bongocero Miguel Garcia quitte Havana D’Primera pour retrouver son oncle Léo Garcia et
                         s’installer à Miami en famille et rejoindre Timbalive.</p>
-                    <figure class="son">Duplicandote La Dos</figcaption><br>
+                    <figure class="son">Duplicandote La Dos</figcaption>
+                        <br>
                         <audio controls src="son/timbalive-ft-roberton-van-van-duplicandote-la-dosis.mp3">
                         </audio>
                     </figure>
                     <a href="https://www.facebook.com/timbaliveband"><img src="img/logo-facebook.png"
                             alt="facebook"></a>
-                    <a href="https://open.spotify.com/artist/5skRgtmxRx7ukwds6UlS7R"><img
-                            src="img/logo-spotify.png"></a>
+                    <a href="https://open.spotify.com/artist/5skRgtmxRx7ukwds6UlS7R"> <img src="img/logo-spotify.png" alt="photospot"></a>
                 </article>
                 <article class="salsa-jacket">
                     <img src="img/timbalive.jpg" alt="jackettimbalive">
@@ -129,13 +131,13 @@
                         Il a débuté en tant qu'auteur et chanteur pour Menudo et les Latins Rascals. Il a plus tard
                         collaboré avec le producteur Little Louie Vega. En 1992, Louie Vega et Marc Anthony ont joué en
                         première partie de Tito Puente au Madison Square Garden de New York.</p>
-                    <figure class="son">Valio La Pena</figcaption><br>
+                    <figure class="son">Valio La Pena</figcaption>
+                        <br>
                         <audio controls src="son/marc-anthony-valio-la-pena-salsa-version.mp3">
                         </audio>
                     </figure>
-                    <a href="https://www.facebook.com/officialmarcanthony"><img src="img/logo-facebook.png"></a>
-                    <a href="https://open.spotify.com/artist/4wLXwxDeWQ8mtUIRPxGiD6"><img
-                            src="img/logo-spotify.png"></a>
+                    <a href="https://www.facebook.com/officialmarcanthony"><img src="img/logo-facebook.png" alt="photoface"></a>
+                    <a href="https://open.spotify.com/artist/4wLXwxDeWQ8mtUIRPxGiD6"><img src="img/logo-spotify.png" alt="photospot"></a>
                 </article>
                 <article class="salsa-jacket">
                     <img src="img/marcanthony.jpg" alt="jacketmarcanthony">
@@ -156,13 +158,13 @@
                         Delgado rencontre ensuite Michel "el Caro", et ils commencent à jouer dans des fêtes et des
                         salles officielles de Guanabacoa et Regla (célèbres quartiers de La Havane où le hip-hop est
                         très populaire) et surtout Alamar.</p>
-                    <figure class="son">La Gozadera</figcaption><br>
+                    <figure class="son">La Gozadera</figcaption>
+                        <br>
                         <audio controls src="son/gente-de-zona-la-gozadera-official-video-ft-marc-anthony.mp3">
                         </audio>
                     </figure>
-                    <a href="https://www.facebook.com/gentedezona"><img src="img/logo-facebook.png"></a>
-                    <a href="https://open.spotify.com/artist/2cy1zPcrFcXAJTP0APWewL"><img
-                            src="img/logo-spotify.png"></a>
+                    <a href="https://www.facebook.com/gentedezona"><img src="img/logo-facebook.png" alt="photoface"></a>
+                    <a href="https://open.spotify.com/artist/2cy1zPcrFcXAJTP0APWewL"><img src="img/logo-spotify.png" alt="photospot"></a>
                 </article>
                 <article class="salsa-jacket">
                     <img src="img/gentedezona.jpg" alt="jacketgentedezona">
@@ -173,8 +175,7 @@
 
     <footer>
         <div class="footer-logo">
-            <a href="phonoteque.html">Manolia</a>
-            <p>Vivez la musique avec passion</p>
+            <a href="phonoteque.html">Man<span>Oli</span></a>
         </div>
         <div class="footer-style">
             <div class="footer-salsa">
@@ -185,9 +186,9 @@
             </div>
         </div>
         <div class="footer-social">
-            <a href="facebook.com"><img src="img/logo-facebook.png"></a>
-                <a href="spotify.com"><img src="img/logo-spotify.png"></a>
-                    <a href="instagram.com"><img src="img/logo-insta.png"></a>
+            <a href="https://fr-fr.facebook.com/"><img src="img/logo-facebook.png" alt="photoface"></a>
+            <a href="https://www.spotify.com/fr/"><img src="img/logo-spotify.png" alt="photospot"></a>
+            <a href="https://www.instagram.com/?hl=fr"><img src="img/logo-insta.png" alt="photoinsta"></a>
         </div>
     </footer>
 
