--- a/phonoteque.html
+++ b/phonoteque.html
@@ -96,8 +96,7 @@
                 <h2>Otis Redding</h2>
                 <figure class="son">The Dock Of The Bay </figcaption>
                     <br>
-                    <audio controls
-                        src="son/Otis.mp3">
+                    <audio controls src="son/Otis.mp3">
                     </audio>
                 </figure>
             </div>
